# ai-constitution-drafter

./: .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  run_locally.sh
content_builder/: pyproject.toml
content_builder/app/: agent.py  server.py
judge/: Dockerfile  agent.py  pyproject.toml
judge/app/: agent.py  server.py
orchestrator/: Dockerfile  pyproject.toml
orchestrator/app/: agent.py  server.py  simple_remote_agent.py
orchestrator/app/utils/: typing.py
orchestrator/frontend/: app.js  constitution.html  content.html  index.html
researcher/: agent.py  pyproject.toml
researcher/app/: agent.py  server.py
